2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in:
	* src/Makefile.am:
	Use autotools' name transformation mechanism to define GNUPLOT_X11 as
	the installed name for the gnuplot_x11 program. Fix the use of
	--program-prefix and friends at configure time. Bug #997481.

2007-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (ENHGD_FLUSH):  libgd 2.0.34 will allow explicit request
	for Adobe Symbol font encoding.  Make use of this to handle transient
	use of Symbol font in enhanced text.  Does not affect older gd versions.

2007-01-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (get_position_default): Because the same parsing routines
	are used for both 2D and 3D positions, the trailing comma after a 2D
	position can be ambiguous.  For example:
	  plot "foo" with labels offset 1,1, "bar" with points
	currently produces an error when the parsing routine tries to interpret
	"bar" as a z component of the offset.  This patch fixes the common case
	shown above, although more pathological cases are still possible.
	E.g.  plot foo w labels offset 1,1,   4 with lines

2007-01-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store_label): Only store color value for each label
	in a "with labels" plot if "rgb variable" has been requested.
	Bugfix.

2007-01-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/graphics.c (plot_image_or_update_axes)
	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
	Change gpiPoints to contain signed x,y values. This is what the
	explanatory comment always implied ("same as in gd.h"), but it 
	wasn't true.  The change fixes several image and polygon clipping
	problems, including segfaults in the pdf driver.
	Bug #1612502

2007-01-27  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* docs/gnuplot.doc: Rearranged the introduction, so it discusses